gc-example-a-v2/kubernetes-objects/gc-example-a-mesh.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gc-example-a-mesh
  namespace: grupo-conocimiento
spec:
  hosts:
  - gc-example-a
  http:
  - corsPolicy:
      allowMethods:
      - GET
    match:
    - uri:
        prefix: /messages
    route:
    - destination:
        host: gc-example-a
        port:
          number: 8000
